统一jdk版本1.8